--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,4 @@
 eclipse.preferences.version=1
-encoding//src/GUI/GUI.java=UTF-8
 encoding//src/dataManagement/Model.java=UTF-8
 encoding//src/dataManagement/MySqlDatabase.java=UTF-8
+encoding//src/dataProcessing/Controller.java=UTF-8
